refactor: atualizar todos os testes e o gradle