@@ -1,18 +1,26 @@
 package vitor.thomazini.codeflixadminvideo.domain.castmember;
 
+import io.vavr.CheckedFunction0;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.function.Executable;
+import vitor.thomazini.codeflixadminvideo.domain.UnitTest;
 import vitor.thomazini.codeflixadminvideo.domain.exception.NotificationException;
 
-public class CastMemberTest {
+import java.util.function.Supplier;
+
+class CastMemberTest extends UnitTest {
 
     @Test
-    public void givenAValidParams_whenCallsNewMember_thenInstantiateACastMember() {
+    void givenAValidParams_whenCallsNewMember_thenInstantiateACastMember() {
+        // Arrange
         final var expectedName = "Vin Diesel";
         final var expectedType = CastMemberType.ACTOR;
 
-        final var actualMember = CastMember.newMember(expectedName, expectedType);
+        // Act
+        final var actualMember = CastMember.newCastMember(expectedName, expectedType);
 
+        // Assert
         Assertions.assertNotNull(actualMember);
         Assertions.assertNotNull(actualMember.id());
         Assertions.assertEquals(expectedName, actualMember.name());
@@ -23,41 +31,48 @@ public class CastMemberTest {
     }
 
     @Test
-    public void givenAInvalidNullName_whenCallsNewMember_shouldReceiveANotification() {
+    void givenAInvalidNullName_whenCallsNewMember_shouldReceiveANotification() {
+        // Arrange
         final String expectedName = null;
         final var expectedType = CastMemberType.ACTOR;
+
         final var expectedErrorCount = 1;
         final var expectedErrorMessage = "'name' should not be null";
 
-        final var actualException = Assertions.assertThrows(
-                NotificationException.class,
-                () -> CastMember.newMember(expectedName, expectedType)
-        );
+        // Act
+        final Executable action = () -> CastMember.newCastMember(expectedName, expectedType);
+
+        // Assert
+        final var actualException = Assertions.assertThrows(NotificationException.class, action);
 
         Assertions.assertNotNull(actualException);
         Assertions.assertEquals(expectedErrorCount, actualException.errors().size());
-        Assertions.assertEquals(expectedErrorMessage, actualException.errors().get(0).message());
+        Assertions.assertEquals(expectedErrorMessage, actualException.errors().getFirst().message());
     }
 
     @Test
-    public void givenAInvalidEmptyName_whenCallsNewMember_shouldReceiveANotification() {
+    void givenAInvalidEmptyName_whenCallsNewMember_shouldReceiveANotification() {
+        // Arrange
         final var expectedName = " ";
         final var expectedType = CastMemberType.ACTOR;
+
         final var expectedErrorCount = 1;
         final var expectedErrorMessage = "'name' should not be empty";
 
-        final var actualException = Assertions.assertThrows(
-                NotificationException.class,
-                () -> CastMember.newMember(expectedName, expectedType)
-        );
+        // Act
+        final Executable action = () -> CastMember.newCastMember(expectedName, expectedType);
+
+        // Assert
+        final var actualException = Assertions.assertThrows(NotificationException.class, action);
 
         Assertions.assertNotNull(actualException);
         Assertions.assertEquals(expectedErrorCount, actualException.errors().size());
-        Assertions.assertEquals(expectedErrorMessage, actualException.errors().get(0).message());
+        Assertions.assertEquals(expectedErrorMessage, actualException.errors().getFirst().message());
     }
 
     @Test
-    public void givenAInvalidNameWithLengthMoreThan255_whenCallsNewMember_shouldReceiveANotification() {
+    void givenAInvalidNameWithLengthMoreThan255_whenCallsNewMember_shouldReceiveANotification() {
+        // Arrange
         final var expectedName = """
                 Gostaria de enfatizar que o consenso sobre a necessidade de qualificação auxilia a preparação e a
                 composição das posturas dos órgãos dirigentes com relação às suas atribuições.
@@ -65,30 +80,35 @@ public class CastMemberTest {
                 manutenção das novas proposições.
                 """;
         final var expectedType = CastMemberType.ACTOR;
+
         final var expectedErrorCount = 1;
         final var expectedErrorMessage = "'name' must be between 3 and 255 characters";
 
-        final var actualException = Assertions.assertThrows(
-                NotificationException.class,
-                () -> CastMember.newMember(expectedName, expectedType)
-        );
+        // Act
+        final Executable action = () -> CastMember.newCastMember(expectedName, expectedType);
+
+        // Assert
+        final var actualException = Assertions.assertThrows(NotificationException.class, action);
 
         Assertions.assertNotNull(actualException);
         Assertions.assertEquals(expectedErrorCount, actualException.errors().size());
-        Assertions.assertEquals(expectedErrorMessage, actualException.errors().get(0).message());
+        Assertions.assertEquals(expectedErrorMessage, actualException.errors().getFirst().message());
     }
 
     @Test
-    public void givenAInvalidNullType_whenCallsNewMember_shouldReceiveANotification() {
+    void givenAInvalidNullType_whenCallsNewMember_shouldReceiveANotification() {
+        // Arrange
         final var expectedName = "Vin Diesel";
         final CastMemberType expectedType = null;
+
         final var expectedErrorCount = 1;
         final var expectedErrorMessage = "'type' should not be null";
 
-        final var actualException = Assertions.assertThrows(
-                NotificationException.class,
-                () -> CastMember.newMember(expectedName, expectedType)
-        );
+        // Act
+        final Executable action = () -> CastMember.newCastMember(expectedName, expectedType);
+
+        // Assert
+        final var actualException = Assertions.assertThrows(NotificationException.class, action);
 
         Assertions.assertNotNull(actualException);
         Assertions.assertEquals(expectedErrorCount, actualException.errors().size());
@@ -96,12 +116,12 @@ public class CastMemberTest {
     }
 
     @Test
-    public void givenAValidCastMember_whenCallUpdate_shouldReceiveUpdated() {
+    void givenAValidCastMember_whenCallUpdate_shouldReceiveUpdated() {
+        // Arrange
         final var expectedName = "Vin Diesel";
         final var expectedType = CastMemberType.ACTOR;
 
-        final var actualMember =
-                CastMember.newMember("vind", CastMemberType.DIRECTOR);
+        final var actualMember = CastMember.newCastMember("vind", CastMemberType.DIRECTOR);
 
         Assertions.assertNotNull(actualMember);
         Assertions.assertNotNull(actualMember.id());
@@ -110,8 +130,10 @@ public class CastMemberTest {
         final var actualCreatedAt = actualMember.createdAt();
         final var actualUpdatedAt = actualMember.updatedAt();
 
+        // Act
         actualMember.update(expectedName, expectedType);
 
+        // Assert
         Assertions.assertEquals(actualID, actualMember.id());
         Assertions.assertEquals(expectedName, actualMember.name());
         Assertions.assertEquals(expectedType, actualMember.type());
@@ -120,53 +142,58 @@ public class CastMemberTest {
     }
 
     @Test
-    public void givenAValidCastMember_whenCallUpdateWithInvalidNullName_shouldReceiveNotification() {
+    void givenAValidCastMember_whenCallUpdateWithInvalidNullName_shouldReceiveNotification() {
+        // Arrange
         final String expectedName = null;
         final var expectedType = CastMemberType.ACTOR;
+
         final var expectedErrorCount = 1;
         final var expectedErrorMessage = "'name' should not be null";
 
-        final var actualMember =
-                CastMember.newMember("vind", CastMemberType.DIRECTOR);
+        final var actualMember = CastMember.newCastMember("vind", CastMemberType.DIRECTOR);
 
         Assertions.assertNotNull(actualMember);
         Assertions.assertNotNull(actualMember.id());
 
-        final var actualException = Assertions.assertThrows(
-                NotificationException.class,
-                () -> actualMember.update(expectedName, expectedType)
-        );
+        // Act
+        final Executable action = () -> actualMember.update(expectedName, expectedType);
+
+        // Assert
+        final var actualException = Assertions.assertThrows(NotificationException.class, action);
 
         Assertions.assertNotNull(actualException);
         Assertions.assertEquals(expectedErrorCount, actualException.errors().size());
-        Assertions.assertEquals(expectedErrorMessage, actualException.errors().get(0).message());
+        Assertions.assertEquals(expectedErrorMessage, actualException.errors().getFirst().message());
     }
 
     @Test
     public void givenAValidCastMember_whenCallUpdateWithInvalidEmptyName_shouldReceiveNotification() {
+        // Arrange
         final var expectedName = " ";
         final var expectedType = CastMemberType.ACTOR;
+
         final var expectedErrorCount = 1;
         final var expectedErrorMessage = "'name' should not be empty";
 
-        final var actualMember =
-                CastMember.newMember("vind", CastMemberType.DIRECTOR);
+        final var actualMember = CastMember.newCastMember("vind", CastMemberType.DIRECTOR);
 
         Assertions.assertNotNull(actualMember);
         Assertions.assertNotNull(actualMember.id());
 
-        final var actualException = Assertions.assertThrows(
-                NotificationException.class,
-                () -> actualMember.update(expectedName, expectedType)
-        );
+        // Act
+        final Executable action = () -> actualMember.update(expectedName, expectedType);
+
+        // Assert
+        final var actualException = Assertions.assertThrows(NotificationException.class, action);
 
         Assertions.assertNotNull(actualException);
         Assertions.assertEquals(expectedErrorCount, actualException.errors().size());
-        Assertions.assertEquals(expectedErrorMessage, actualException.errors().get(0).message());
+        Assertions.assertEquals(expectedErrorMessage, actualException.errors().getFirst().message());
     }
 
     @Test
-    public void givenAValidCastMember_whenCallUpdateWithLengthMoreThan255_shouldReceiveNotification() {
+    void givenAValidCastMember_whenCallUpdateWithLengthMoreThan255_shouldReceiveNotification() {
+        // Arrange
         final var expectedName = """
                 Gostaria de enfatizar que o consenso sobre a necessidade de qualificação auxilia a preparação e a
                 composição das posturas dos órgãos dirigentes com relação às suas atribuições.
@@ -174,45 +201,48 @@ public class CastMemberTest {
                 manutenção das novas proposições.
                 """;
         final var expectedType = CastMemberType.ACTOR;
+
         final var expectedErrorCount = 1;
         final var expectedErrorMessage = "'name' must be between 3 and 255 characters";
 
-        final var actualMember =
-                CastMember.newMember("vind", CastMemberType.DIRECTOR);
+        final var actualMember = CastMember.newCastMember("vind", CastMemberType.DIRECTOR);
 
         Assertions.assertNotNull(actualMember);
         Assertions.assertNotNull(actualMember.id());
 
-        final var actualException = Assertions.assertThrows(
-                NotificationException.class,
-                () -> actualMember.update(expectedName, expectedType)
-        );
+        // Act
+        final Executable action = () -> actualMember.update(expectedName, expectedType);
+
+        // Assert
+        final var actualException = Assertions.assertThrows(NotificationException.class, action);
 
         Assertions.assertNotNull(actualException);
         Assertions.assertEquals(expectedErrorCount, actualException.errors().size());
-        Assertions.assertEquals(expectedErrorMessage, actualException.errors().get(0).message());
+        Assertions.assertEquals(expectedErrorMessage, actualException.errors().getFirst().message());
     }
 
     @Test
-    public void givenAValidCastMember_whenCallUpdateWithInvalidNullType_shouldReceiveNotification() {
+    void givenAValidCastMember_whenCallUpdateWithInvalidNullType_shouldReceiveNotification() {
+        // Arrange
         final var expectedName = "Vin Diesel";
         final CastMemberType expectedType = null;
+
         final var expectedErrorCount = 1;
         final var expectedErrorMessage = "'type' should not be null";
 
-        final var actualMember =
-                CastMember.newMember("vind", CastMemberType.DIRECTOR);
+        final var actualMember = CastMember.newCastMember("vind", CastMemberType.DIRECTOR);
 
         Assertions.assertNotNull(actualMember);
         Assertions.assertNotNull(actualMember.id());
 
-        final var actualException = Assertions.assertThrows(
-                NotificationException.class,
-                () -> actualMember.update(expectedName, expectedType)
-        );
+        // Act
+        final Executable action = () -> actualMember.update(expectedName, expectedType);
+
+        // Assert
+        final var actualException = Assertions.assertThrows(NotificationException.class, action);
 
         Assertions.assertNotNull(actualException);
         Assertions.assertEquals(expectedErrorCount, actualException.errors().size());
-        Assertions.assertEquals(expectedErrorMessage, actualException.errors().get(0).message());
+        Assertions.assertEquals(expectedErrorMessage, actualException.errors().getFirst().message());
     }
 }
